--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
-.vscode
+# vscode files
+.vscode/
+# macOS system files
+.DS_Store
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Fresh build directory
+_fresh/
+# npm dependencies
+node_modules/
+
+# Old files
+*.bak
