feat: Implement team management with dark mode support, enhanced image handling
- Add ThemeProvider and theme toggle for dark/light modes
- Implement TeamManager component with full team functionality
- Refactor ImageGallery with improved error states and metadata support
- Migrate to indexedDB for team-specific image storage
- Update UI components with better loading states and user feedback

--- a/deno.json
+++ b/deno.json
@@ -30,7 +30,8 @@
     "tailwindcss/": "npm:/tailwindcss@3.4.1/",
     "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js",
     "$std/": "https://deno.land/std@0.216.0/",
-    "zod": "https://deno.land/x/zod@v3.22.4/mod.ts"
+    "zod": "https://deno.land/x/zod@v3.22.4/mod.ts",
+    "idb": "https://esm.sh/idb@8.0.0"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
