--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: Deploy
 on:
   push:
-    branches: main
-  pull_request:
-    branches: main
+    branches: 
+      - main
+      - dev/freash-refactor
 
 jobs:
   deploy:
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      id-token: write # Needed for auth with Deno Deploy
-      contents: read # Needed to clone the repository
+      id-token: write
+      contents: read
 
     steps:
       - name: Clone repository
@@ -23,14 +23,25 @@ jobs:
         with:
           deno-version: v2.x
 
+      # 只有Fresh框架分支才需要build
       - name: Build step
+        if: github.ref == 'refs/heads/dev/freash-refactor'
         run: "deno task build"
 
-      - name: Upload to Deno Deploy
+      # main分支部署到生产环境
+      - name: Upload to Production
+        if: github.ref == 'refs/heads/main'
         uses: denoland/deployctl@v1
         with:
-          project: "yuenszehong-closeai-ima-69"
+          project: "closeai-image-galary"
           entrypoint: "main.ts"
           root: ""
-          
-          
+
+      # dev分支部署到开发环境
+      - name: Upload to Development  
+        if: github.ref == 'refs/heads/dev/freash-refactor'
+        uses: denoland/deployctl@v1
+        with:
+          project: "frsh-closeai-image-galary"
+          entrypoint: "main.ts"
+          root: ""
