--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,8 @@ jobs:
           project: "closeai-image-galary"
           entrypoint: "main.ts"
           root: ""
-          token: ${{ secrets.DENO_DEPLOY_TOKEN }}
+        env:
+          DENO_DEPLOY_TOKEN: ${{ secrets.DENO_DEPLOY_TOKEN }}
 
       # dev分支部署到开发环境
       - name: Upload to Development  
@@ -46,4 +47,5 @@ jobs:
           project: "frsh-closeai-image-galary"
           entrypoint: "main.ts"
           root: ""
-          token: ${{ secrets.DENO_DEPLOY_TOKEN }}
+        env:
+          DENO_DEPLOY_TOKEN: ${{ secrets.DENO_DEPLOY_TOKEN }}
