refactor: remove zh-TW translations and update zh-CN translations for consistency
- Deleted the zh-TW translation file and removed related references.
- Updated zh-CN translations for theme and language sections to improve clarity and consistency.
- Simplified the 404 error page by hardcoding titles and messages in Chinese.
- Refactored the app structure to set a default language and theme directly in the HTML.
- Enhanced API calls to use direct ChatGPT API without proxy for better performance.
- Updated styles and Tailwind configuration for improved theming and responsiveness.
- Added utility functions for direct API calls and fetching metadata without proxy.

--- a/deno.json
+++ b/deno.json
@@ -15,10 +15,9 @@
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
     "$std/": "https://deno.land/std@0.216.0/",
-    "@nanostores/i18n": "npm:@nanostores/i18n@^1.0.1",
-    "@nanostores/preact": "npm:@nanostores/preact@^1.0.0",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
+    "@elsoul/fresh-theme": "https://deno.land/x/fresh_theme@latest/",
     "tailwindcss": "npm:tailwindcss@3.4.1",
     "tailwindcss/plugin": "npm:tailwindcss@3.4.1/plugin.js",
     "preact": "https://esm.sh/preact@10.22.0",
