feat: Replace fflate with client-zip for memory-efficient ZIP exports
- Replace fflate with client-zip library for constant ~36MB memory usage
- Remove 590+ lines of complex ZIP processing code
- Add dynamic file format detection via HEAD requests
- Implement aggressive parallel processing with Promise.race
- Extract types to separate files for better organization
- Enable all files in root directory (no subdirectories)
- Support batch processing for maximum download speeds

--- a/deno.json
+++ b/deno.json
@@ -23,7 +23,7 @@
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
     "zod": "https://deno.land/x/zod@v3.22.4/mod.ts",
-    "fflate": "npm:fflate@^0.8.2"
+    "client-zip": "https://esm.sh/client-zip@2.4.4"
   },
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
   "nodeModulesDir": "auto"
